--- a/app/registrations(新規登録)/new.html.erb
+++ b/app/registrations(新規登録)/new.html.erb
@@ -1,3 +1,5 @@
+
+
 <div class="main">
   <div class="inner">
     <div class="form__wrapper">
@@ -5,7 +7,8 @@
 
         <%# 「モデル名」にはUserモデルであれば@userを渡しましょう。%>
         <%# 「新規登録機能へのパス」は、devise導入後にrails routesを実行してdevise/registrations#createへのパスを確認し、記載してください。 %>
-        <%= form_with model: モデル名, url: 新規登録機能へのパス, local: true do |f| %>
+      
+        <%= form_with model: @user, url: new_user_registration, local: true do |f| %>
 
         <div class="field">
           <%= f.label :hoge, "メールアドレス" %><br />
