--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
             <%= link_to image_tag("logo.png", class: :logo), root_path %>
           </div>
           <% if user_signed_in? %>
-            ログインしています
+            <%= "ログインしています" %>
             <%# ログインしているときは以下を表示するようにしましょう %>
              <div class="nav__right">
                <%= link_to "ログアウト", destroy_user_session_path,  class: :nav__logout %>
