--- a/app/views/prototypes/new.html.erb
+++ b/app/views/prototypes/new.html.erb
@@ -3,6 +3,12 @@
     <div class="form__wrapper">
       <h2 class="page-heading">新規プロトタイプ投稿</h2>
         <%# 部分テンプレートでフォームを表示する %>
+        <%= form_with(model: @tweet, local: true) do |form| %>
+      <%= form.text_field :name, placeholder: "name" %>
+      <%= form.text_field :image, placeholder: "Image Url" %>
+      <%= form.text_area :text, placeholder: "text", rows: "10" %>
+      <%= form.submit "送信" %>
+    <% end %>
     </div>
   </div>
 </div>
