--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -5,6 +5,6 @@
     <p class="card__summary">
       <%= prototype.catch_copy %>
     </p>
-    <%= link_to "by #{prototype.user.name}", user_path(prototype_path), class: :card__user %> <%#ユーザーへのリンク%>
+    <%= link_to "by ", root_path, class: :card__user %> <%#ユーザーへのリンク%>
   </div>
 </div>
