--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -5,12 +5,12 @@
     <%# ログインしているときは以下を表示する %>
        <div class="greeting"> 
         こんにちは、
-        <%= link_to "#{current_user.name}さん", user_path(current_user), class: :greeting__link %>
+        <%= link_to "さん", root_path, class: :greeting__link %>
        </div> 
        <% end %>
     <%# // ログインしているときは上記を表示する %>
     <div class="card__wrapper">
-    <%= render partial: 'prototype', collection: @prototypes %>
+     <%= render partial: 'prototype', collection: @prototypes %>
       <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
     </div>
   </div>
