--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -1,10 +1,10 @@
 <div class="card">
   <%= link_to image_tag(prototype.image, class: :card__img ), prototype_path(prototype)%>
   <div class="card__body">
-    <%= link_to prototype.title,  prototype_path(prototype), class: :card__title%>
+    <%= link_to prototype.title, prototype_path(prototype), class: :card__title%><%#タイトルへのリンク%>
     <p class="card__summary">
       <%= prototype.catch_copy %>
     </p>
-    <%= link_to "by ", root_path, class: :card__user %> <%#ユーザーへのリンク%>
+    <%= link_to "by #{prototype.user.name}", root_path, class: :card__user %> <%#ユーザーへのリンク%>
   </div>
 </div>
