--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -4,11 +4,11 @@
       <p class="prototype__hedding">
         <%= @prototype.title %>
       </p>
-      <%= link_to "by #{prototype_user_name}", user_path(prototype_user), class: :prototype__user %>
+      <%= link_to "by#{@prototype_user_name}", prototype_path(prototype_path), class: :prototype__user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
         <% if current_user == @prototype.user%>
         <div class="prototype__manage">
-          <%= link_to "編集する", edit_prototypepath(@prototype), class: :prototype__btn %>
+          <%= link_to "編集する", edit_prototype_path(@prototype), class: :prototype__btn %>
           <%= link_to "削除する", prototype_path(@prototype), method: :delete, class: :prototype__btn %>
         </div>
         <% end %>
