--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -4,7 +4,7 @@
       <p class="prototype__hedding">
         <%= @prototype.title %>
       </p>
-      <%= link_to "by#{@prototype_user_name}", prototype_path(prototype_path), class: :prototype__user %>
+      <%= link_to "by#{@prototype_user_name}", "/users/#{current_user.id}", class: :prototype__user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
         <% if current_user == @prototype.user%>
         <div class="prototype__manage">
@@ -49,7 +49,7 @@
           <% @comments.each do |comment| %>
             <li class="comments_list">
               <%=  comment.content %>
-              <%= link_to "（#{comment.user.name}）", prototype_path(comment.user), class: :comment_user %>
+              <%= link_to "（#{comment.user.name}）", "/users/#{current_user.id}", class: :comment_user %>
             </li>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
           <% end %>
