--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -4,9 +4,10 @@
       <p class="prototype__hedding">
         <%= @prototype.title %>
       </p>
+      <% if user_signed_in? && current_user == @prototype.user%>
       <%= link_to "by.#{@prototype.user.name}", user_path(@prototype.user), class: :prototype__user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
-        <% if current_user == @prototype.user%>
+        
         <div class="prototype__manage">
           <%= link_to "編集する", edit_prototype_path(@prototype), class: :prototype__btn %>
           <%= link_to "削除する", prototype_path(@prototype), method: :delete, class: :prototype__btn %>
